# cmake-essential

./: .gitignore  CMakeEssential.cmake  CMakeEssentialConfig.cmake  CMakeEssentialConfigVersion.cmake  CMakeLists.txt  README.adoc  cmake-format.yaml
.github/workflows/: cmake.yml
docs/: README.in.adoc
include/: Assert.cmake  Ccache.cmake  Git.cmake  MessageContext.cmake  ParseArguments.cmake  Policies.cmake  Project.cmake  ResolveHostname.cmake  TestByCompilation.cmake
include/Ccache/: launch-ccache-for-c.in  launch-ccache-for-cxx.in
tools/: CMakeEssential.in.cmake  CMakeEssentialConfig.in.cmake  CMakeLists.in.cmake
